--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <html data-theme="dark"></html>
+    <html data-theme="cupcake"></html>
     <title>Nuestro Campo</title>
   </head>
   <body>
